--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -37,6 +37,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Modernizr is used for flexbox fallback -->
     <script src="/assets/spree/frontend/modernizr.custom.js"></script>
+     <script src="/assets/spree/frontend/product.js"></script>
   </head>
   <body>
   <% if products.any? %>
